--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio-nikhil",
+  "author": "Nikhil Sai Ramini",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,6 +21,7 @@
     "react-vertical-timeline-component": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
+ 
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
